Fixes to padding for text content on smaller screens for partners page

--- a/src/pages/Partners/partners.scss
+++ b/src/pages/Partners/partners.scss
@@ -27,11 +27,16 @@ main.partners-page {
     }
 
     .current-partners-text-content {
+      padding: 20px;
+      background: $grey-darker;
+
       @include minScreen($desktop) {
         width: calc(100% - 46%);
       }
-      background: $grey-darker;
-      padding: 34px 46px;
+      @include minScreen($mobile) {
+        padding: 34px 46px;
+      }
+
       .text-slogan {
         text-align: right;
         font-size: 6.4rem;
@@ -47,8 +52,12 @@ main.partners-page {
   }
   section.partners-form {
     margin-top: 75px;
-    padding: 70px 36px;
     background: $grey-darker;
+
+    @include minScreen($mobile) {
+      padding: 70px 36px;
+    }
+
     .form-container__partners {
       max-width: none;
 
@@ -62,6 +71,7 @@ main.partners-page {
         -webkit-text-underline-position: under;
         -ms-text-underline-position: below;
         text-underline-position: under;
+        line-height: 1.2;
       }
 
       p {
@@ -79,16 +89,20 @@ main.partners-page {
           .textarea {
             width: 48%;
           }
+          .textarea {
+            height: 364px;
+          }
         }
 
-        .text-inputs, .textarea {
+        .text-inputs,
+        .textarea {
           @include maxScreen(1149px) {
             width: 100%;
           }
 
           .field-container {
             width: 100%;
-  
+
             input,
             textarea {
               font-family: $oxygen;
@@ -96,7 +110,6 @@ main.partners-page {
             }
           }
         }
-
 
         .textarea {
           text-align: right;
@@ -112,6 +125,7 @@ main.partners-page {
           width: 168px;
           height: 48px;
           padding: 10px;
+          font-size: 12px;
         }
       }
     }
